--- a/style.css
+++ b/style.css
@@ -45,6 +45,11 @@ body {
   margin-top: 25px;
 }
 
+.file-name {
+    padding-top: 6px;
+    width: 250px;
+}
+
 .tsp-button {
   padding: 6px 12px;
   font-size: 14px;
@@ -90,6 +95,16 @@ body {
   width: 100%;
   height: 100%;
   display: block;
+}
+
+.processing-text {
+  position: absolute;
+  left: 50%;
+  bottom: 8px;
+  transform: translateX(-50%);
+  display: none;
+  color: #2a2a2a;
+  z-index: 10;
 }
 
 /* Skip animation button centered at bottom */
